# vision-pdf-to-epub

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  models.py
app/events/: sse.py
app/jobs/: cleanup.py  registry.py
app/pipeline/: assembler.py  ocr.py  orchestrator.py  renderer.py
docs/: architecture-v1.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: EpubViewer.tsx  JobProgress.tsx  JobResult.tsx  UploadZone.tsx
frontend/src/hooks/: useJobEvents.ts
frontend/src/lib/: api.ts
tests/: conftest.py  test_api_contracts.py  test_cleanup.py  test_epub_assembly.py  test_job_lifecycle.py  test_job_registry.py  test_pipeline_orchestrator.py  test_retry_flow.py  test_sse_events.py
