[project]
name = "vision-pdf-to-epub"
version = "0.1.0"
description = "Convert scanned PDFs to EPUB using vision LLM OCR"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "PyMuPDF>=1.24",
    "httpx>=0.28",
    "ebooklib>=0.18",
    "sse-starlette>=2.1",
    "aiofiles>=24.1",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "pytest-timeout>=2.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"
